[gd_scene load_steps=3 format=3 uid="uid://loginscreen123"]

[ext_resource type="Script" path="res://scripts/screens/LoginScreen.gd" id="1_login"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_login")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1.0)

[node name="LoginContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="LoginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
text = "CYBER LOGIN"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0, 1, 1, 1)
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="LoginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Login" type="Control" parent="LoginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="LoginForm" type="VBoxContainer" parent="LoginContainer/VBoxContainer/TabContainer/Login"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme_override_constants/separation = 15

[node name="UsernameLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm"]
layout_mode = 2
text = "Username"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="UsernameInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm"]
layout_mode = 2
placeholder_text = "Enter username"
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="PasswordLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm"]
layout_mode = 2
text = "Password"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="PasswordInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm"]
layout_mode = 2
placeholder_text = "Enter password"
secret = true
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="LoginButton" type="Button" parent="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "LOGIN"
theme_override_colors/font_color = Color(0, 1, 1, 1)

[node name="Register" type="Control" parent="LoginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="RegisterForm" type="VBoxContainer" parent="LoginContainer/VBoxContainer/TabContainer/Register"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme_override_constants/separation = 15

[node name="UsernameLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
text = "Username"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="UsernameInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
placeholder_text = "Choose username"
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="EmailLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
text = "Email"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="EmailInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
placeholder_text = "Enter email"
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="PasswordLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
text = "Password"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="PasswordInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
placeholder_text = "Choose password"
secret = true
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="ConfirmLabel" type="Label" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
text = "Confirm Password"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="ConfirmInput" type="LineEdit" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
placeholder_text = "Confirm password"
secret = true
theme_override_colors/font_placeholder_color = Color(0.5, 0.5, 0.5, 1)

[node name="RegisterButton" type="Button" parent="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "REGISTER"
theme_override_colors/font_color = Color(1, 0, 1, 1)

[node name="StatusLabel" type="Label" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
horizontal_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="LoginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"
theme_override_colors/font_color = Color(0, 1, 1, 1)

[connection signal="pressed" from="LoginContainer/VBoxContainer/TabContainer/Login/LoginForm/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="LoginContainer/VBoxContainer/TabContainer/Register/RegisterForm/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="LoginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]